--- a/assets/css/styles-output.css
+++ b/assets/css/styles-output.css
@@ -717,8 +717,8 @@ p {
 @media (min-width: 1024px) {
   .timeline-container {
     flex-direction: row;
-    padding-left: 70px;
-    padding-right: 70px;
+    padding-left: 32px;
+    padding-right: 32px;
   }
 }
 
@@ -899,7 +899,7 @@ p {
 
 .iconic-slider-container .swiper-container {
   position: relative;
-  padding-left: 320px;
+  padding-left: 270px;
   overflow: visible;
   max-width: 1440px;
 }
@@ -1061,7 +1061,7 @@ p {
 
 @media(max-width:1300px) {
   .iconic-slider-container .swiper-container {
-    padding-left: 50px;
+    padding-left: 30px;
   }
 }
 
@@ -1113,7 +1113,8 @@ p {
 .photo-slider-thumb {
   width: 510px;
   height: 100%;
-  margin: auto;
+  margin-left: 14%;
+  margin-right: auto;
   display: flex;
   flex-direction: column;
   gap: 32px;
@@ -1337,9 +1338,21 @@ p {
   }
 }
 
+@media(max-width:1500px) {
+  .photo-slider-thumb {
+    width: 450px;
+    margin-left: 4%;
+  }
+
+  .photo-slider-container .main-slider {
+    width: 600px;
+  }
+}
+
 @media(max-width:1300px) {
   .photo-slider-thumb {
-    width: 350px;
+    width: 450px;
+    margin-left: 3%;
   }
 
   .photo-slider-container .main-slider {
@@ -1358,6 +1371,20 @@ p {
 }
 
 @media(max-width:900px) {
+  .home-navbar.scrolled #navwrapper button{
+    background: transparent;
+    color: #fff;
+  }
+
+  .home-navbar.scrolled #navwrapper button svg path{
+    stroke:black;
+  }
+
+  .home-navbar.scrolled #navwrapper .btn-white{
+    background: #000;
+    color: #fff;
+  }
+
   .swiper-Timeline .odometer {
     font-size: 130px;
   }
@@ -1377,6 +1404,8 @@ p {
     position: relative;
     z-index: 100;
     gap: 16px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .photo-nav-main .swiper-pagination-fraction {
@@ -1602,6 +1631,10 @@ p {
   z-index: 2;
 }
 
+.z-50 {
+  z-index: 50;
+}
+
 .col-span-2 {
   grid-column: span 2 / span 2;
 }
@@ -1782,10 +1815,6 @@ p {
   min-height: 1080px;
 }
 
-.min-h-\[320px\] {
-  min-height: 320px;
-}
-
 .min-h-\[517px\] {
   min-height: 517px;
 }
@@ -1817,6 +1846,10 @@ p {
 .w-max {
   width: -moz-max-content;
   width: max-content;
+}
+
+.min-w-full {
+  min-width: 100%;
 }
 
 .max-w-2xl {
@@ -3232,6 +3265,10 @@ p {
     height: 100vh;
   }
 
+  .md\:max-h-\[640px\] {
+    max-height: 640px;
+  }
+
   .md\:w-14 {
     width: 3.5rem;
   }
@@ -3634,6 +3671,10 @@ p {
     left: 120px !important;
   }
 
+  .xl\:max-w-\[1150px\] {
+    max-width: 1150px;
+  }
+
   .xl\:max-w-\[1170px\] {
     max-width: 1170px;
   }
@@ -3658,6 +3699,10 @@ p {
 @media (min-width: 1536px) {
   .\32xl\:max-w-\[1280px\] {
     max-width: 1280px;
+  }
+
+  .\32xl\:max-w-\[1360px\] {
+    max-width: 1360px;
   }
 
   .\32xl\:px-12 {
